used the js fetch api and fetched the bing search results for the images

--- a/technology.html
+++ b/technology.html
@@ -108,7 +108,8 @@
           </script>
           </div>
         </center>
-    
+
+        <!-- <script src="/categories/sketches.js"></script> -->
     </body>
     </html>
             
