done with the data fetching part of the categories from Rest api

--- a/technology.html
+++ b/technology.html
@@ -109,7 +109,7 @@
           </div>
         </center>
 
-        <!-- <script src="/categories/sketches.js"></script> -->
+        <script src="/categories/fashion.js"></script>
     </body>
     </html>
             
